# oxitrack

./: .gitignore  .ignore  CHANGELOG.md  Cargo.toml  Containerfile  LICENSE.txt  Makefile  README.md  bacon.toml  build.rs  compose.yaml  config.toml  input.css  justfile  oxitraffic.db-shm  oxitraffic.js  package.json  rspack.config.js  tsconfig.json
.github/workflows/: ci.yml
.sqlx/: query-080c27b1f60296fb240297150543bf3378b151ab7b27a77982494d819e5383d1.json  query-1482f69d91b8eb64137e36be1fd282104d5bc5594df1e5d6f324adf518f30803.json  query-16ba4d6bdc2ecb827b1c41f3a71d83aae1ed2e4b18e5cc44e98a35e917e0a65b.json  query-18f68474c2e288b7eec3a703bdc05d04995510edf1d675ef5552b3f7d6517337.json  query-1cbdd7ea098abb4919a1cb5aed922f810e7d2d2a2cb287605fc614a4f76d0092.json  query-1d8c4b5b3530d939d0d603fd0f5f0ef09e0d2aee6c8f2db380d49349d2a310dd.json  query-1f824b8ddcf900b26c7f3e4e6621782a2048bba70d05220586ef6e3e69816530.json  query-1ff5458062caaf41e5e9a14b728ef0662017ceb6de7db55153464e9eecbc2dc9.json  query-2040e21cf1c247fecf7a3d99ce7c57766f0b6a7f66fc72f993315206cc3eab80.json  query-209643f10373aaedc806f69dd723c7b42cfae3ae23ea85b7c7b5985ed3d78121.json  query-22efdfef137aa2ebb28e587d43ff910d566ec1cf6aa7eba7e6547f551260be38.json  query-24f65ed4e97df1a700ce09e3ccc5f3a3b996a7ada1df56f7390b34d2b0d60f0e.json  query-25c4967127ecd3fe0798f5c22279c1373ecf4f556f0a3595450e29307335b794.json  query-2cb44470c3678f21008b0c1df67cb72244c8ea9f2c1007a8b4af4ff3c0aea76c.json  query-322c2e57125976b363c754d3ed7971c201e8bea67a65caa0ab3095a981979ae2.json  query-384fbd68de7aeed1d25b19888ca8757244de7f5676f8f04e14f863c3ef77fa71.json  query-3ed0ce34f48ef4e7fbb724ad2ff603c1b18e70b14a31a62e9db46be49924d4ef.json  query-3f040d7c4e45ed86c4f84e443c84902e270f996f2f4658a8426e7a3b10fc29db.json  query-42c2bbc1d5b68c024754055735f0dbd6e4aa7cfd2a6bf417678bd8f74e29dc37.json  query-4ba9ea2ff640ec98d71bfd30fe5b4c50ec1cc96b392adc99e4d2c43b41d47855.json  query-4e52fd1af21f35a318beacd51cb35961fb82e98f2fdb1593039b3d757b46ecd8.json  query-4ec9e59e15e04e7e756ad529c92d64db379439e7b66a2a225a7a621ac37e67ba.json  query-5328bf77dc24de2a9bdf1856ca50d9bc9e3e9a254ba499d6fa1d9cc08b3f36a9.json  query-542fb55a3eef8b4c74e969a5ccb4058a733f3cd7c52ff5b7a22478e3fcfe415d.json  query-55b3f34284d6e04e40a4ddd65fd7d05122d1894e0154775e5b1e66f798b23a66.json  query-5761dc7b195dc0ba7c0a8aa366016939b2c4e37c59b3dc5905628220d162a1a5.json  query-580e03dceecba898ad4cf292cb1ebaeaebb69b646d01909de45002adcf375d6f.json  query-6106f98695bf75a1c331aa070a71ef91c79c7970bd2263f94bed2bb95f9544f7.json  query-639945c57ae906ee395d2ddf9816211802a9c454bf2dab04053961ca034bf97a.json  query-656df0356d85a4a462852fca7e3b367e16b976feb106cca175567dc47c586fe4.json  query-6fe589bc4334e338792d89cd249bb88257cab912a2a6f349c6ef5c53e1db9cc6.json  query-76ae806acff77e2c465c54e0f41d51bd4e0e228a36f688447a196f3595a74473.json  query-8548bd84251b49c8858ecb46d3a66844de16f193a3f569309f3abd37aa875b90.json  query-877c194931d5b96c9b7de0c0b35869f77e4a3631a961834c440c68c773051455.json  query-89230a0f149d2db936f1bfe96a8247d2dea2c83e0492d809003158300e9c5202.json  query-91fb0c05fb679f0fc947da55779243a6e1d7ee0efe1d5b346908f0d36e410bb8.json  query-9c863282b28f8de5bce1c6e7137b39c5b556bd4c42bb58d5c92d77723bdc3381.json  query-9f494272961f34e2f65a235abb5993f8a021c122105851a364988f7e1e6e3b9b.json  query-a697d9648a3ccd703143ca97c051e3f27bf996090dd2453a7ca78645eea22c22.json  query-ad910de95c38ffa3ff27f05dfc9c511ad2de57acf30a50bcb4f728997ca65135.json  (+18 more)
migrations/: 20230724161528_create_init_tables.sql  20230731223645_make_path_unique.sql  20230801090428_rename_calls_to_visits.sql  20230920204625_add_referrer.sql  20230921010850_drop_path_id_default.sql  20230921023227_upgrade_serial_to_identity.sql  20230921025400_drop_dangling_sequence.sql  20231013143122_left_at.sql  20231015045941_drop_default_registered_at.sql  20231108163947_fresh_start.sql
migrations/postgres/: 20231118231046_add_time_s.sql
migrations/sqlite/: 20231108163947_fresh_start.sql  20231118231046_add_time_s.sql  20250422000000_add_indexes.sql  20251116000000_add_sessions.sql
src/: app.rs  config.rs  db.rs  extractors.rs  formatters.rs  handlers.rs  main.rs  states.rs
src/extractors/: query_path.rs  referrer_domain.rs
src/formatters/: datetime.rs  datetime_verbose.rs  percentage.rs  seconds.rs  utc_offset.rs
src/handlers/: api.rs  base_template.rs  chart_data.rs  count_js.rs  count_rows.rs  dashboard.rs  mod.rs  page_left.rs  post_sleep.rs  queries.rs  register.rs  states.rs  stats_data.rs  visits_table_body.rs
src/handlers/api/: count.rs  counts.rs  history.rs  live.rs
src/handlers/chart_data/: all_time.rs  chart_data_aggregator.rs  chart_data_vec.rs  contiguous_date.rs  contiguous_date_part.rs  last_2_days.rs  last_60_days.rs  start_datetime.rs  whole_days_since_first_visit.rs
src/handlers/dashboard/: count_rows.rs  hx_filter.rs  hx_referrer.rs  hx_stats.rs  index.rs  mod.rs  page_stats.rs  plotting.rs  referrer.rs  stats.rs  templates.rs
src/handlers/states/: mod.rs  sleeping_hotel.rs
src/handlers/stats_data/: all_time.rs  chart_data_aggregator.rs  contiguous_date_part.rs  last_2_days.rs  last_60_days.rs  referrer_count.rs  table_body_templates.rs  whole_days_since_first_visit.rs
src/states/: sleeping_hotel.rs  visitor_state.rs
static/: chart.js  filter.js  main.css  path-filter.js  sort.js  style.css  theme.js
templates/: bar_chart.html  base.html  chart_div.html  count.js  filter_buttons.html  hx_stats.html  index.html  pages_referrers.html  pages_rows.html  referrer.html  referrer_panel.html  referrers_rows.html  referrers_table_body.html  stats.html  visits_table_body.html
templates/dashboard/: index.html  stats.html
ts/: index.ts  stats.ts
