[package]
name = "oxitraffic"
description = "Self-hosted, simple and privacy respecting website traffic tracker"
version = "0.10.5"
authors = ["Mo Bitar <mo8it@proton.me>"]
repository = "https://codeberg.org/mo8it/oxitraffic"
license = "AGPL-3.0"
keywords = ["selfhosted", "analytics", "traffic"]
edition = "2024"

[dependencies]
anyhow = "1"
askama = { version = "0.15", default-features = false, features = ["derive", "std"] }
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum-ctx = "0.5"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }
oxi-axum-helpers = { version = "0.0.36", features = ["init"] }
toml = "0.8"
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
reqwest = { version = "0.13", default-features = false, features = ["default-tls"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate", "time", "sqlite"] }
time = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace", "compression-gzip", "set-header", "fs"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
url = "2"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
mime = "0.3"
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["fs"] }

[build-dependencies]
time = "0.3"

[lints.clippy]
result_large_err = "allow"

[profile.dev]
strip = "debuginfo"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.askama_derive]
opt-level = 3