[package]
name = "oxytrack"
description = "Self-hosted, simple and privacy respecting website traffic tracker"
version = "0.10.5"
authors = ["Mo Bitar <mo8it@proton.me>"]
repository = "https://codeberg.org/mo8it/oxytrack"
license = "AGPL-3.0"
keywords = ["selfhosted", "analytics", "traffic"]
categories = ["web-programming", "web-programming::http-server"]
edition = "2024"

[dependencies]
anyhow = "1"
askama = { version = "0.15", default-features = false, features = ["derive", "std"] }
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum-ctx = "0.5"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }

toml = ">=1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
# native-tls uses the OS TLS stack (SecureTransport / SChannel / OpenSSL) and
# avoids pulling in rustls-platform-verifier → jni, which would otherwise bring
# in duplicate old versions of thiserror, windows-sys, jni-sys, and getrandom.
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate", "time", "sqlite"] }
time = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace", "compression-gzip", "set-header", "fs"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
url = "2"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }
mime = "0.3"
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["fs"] }

[build-dependencies]
time = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# ── Lint groups ───────────────────────────────────────────────────────────────
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# ── Intentional allow: axum_ctx re-exports ────────────────────────────────────
# `axum_ctx::*` is a purpose-built re-export crate; glob import is intentional.
wildcard_imports = "allow"

# ── Intentional allow: numeric casts ──────────────────────────────────────────
# SQLite returns i64; visit counts and durations realistically fit in f64/u64.
# Each cast site is individually reviewed and annotated with #[allow(...)].
cast_precision_loss    = "allow"
cast_sign_loss         = "allow"
cast_possible_truncation = "allow"

# ── Intentional allow: axum error types ───────────────────────────────────────
# RespErr from axum_ctx is large by design (carries HTTP status + message).
result_large_err = "allow"

# ── Intentional allow: transitive dependency version conflicts ─────────────────
# The remaining duplicates are all upstream-locked and cannot be resolved by us:
#
#   hashbrown 0.15/0.17    — sqlx-core uses 0.15 via hashlink; indexmap uses 0.17
#   rand 0.8/0.9           — sqlx bundles sqlx-mysql/postgres (even unused features
#                            are resolved in the lock file) which need rand 0.8;
#                            we directly depend on rand 0.9
#   rand_core/rand_chacha  — follow the rand 0.8/0.9 split above
#   getrandom 0.2/0.3/0.4  — rand 0.9 → getrandom 0.3; native-tls → getrandom 0.4;
#                            platform-specific paths drag in 0.2
#   r-efi 5/6              — follows the getrandom 0.3/0.4 split
#   redox_syscall 0.5/0.7  — parking_lot 0.12 (via sqlx + figment dev-dep) needs
#                            0.5; newer ecosystem crates use 0.7
#   windows-sys 0.48/0.61  — platform-specific (Windows only); mio/tokio use 0.61,
#                            older platform crates use 0.48
#   wit-bindgen 0.51/0.57  — deep wasm toolchain transitive chain via getrandom 0.4
multiple_crate_versions = "allow"

[profile.dev]
strip = "debuginfo"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.askama_derive]
opt-level = 3
