[package]
name = "oxitrack"
description = "Self-hosted, simple and privacy respecting website traffic tracker"
version = "0.11.0"
authors = ["Mo Bitar <mo8it@proton.me>, Matthias Endler <matthias@endler.dev>"]
repository = "https://github.com/mre/oxitrack"
license = "AGPL-3.0"
keywords = ["selfhosted", "analytics", "traffic"]
categories = ["web-programming", "web-programming::http-server"]
edition = "2024"

[dependencies]
anyhow = "1"
figment = { version = "0.10", features = ["toml", "env"] }
askama = { version = "0.15", default-features = false, features = ["derive", "std"] }
askama_web = { version = "0.15", features = ["axum-0.8"] }
axum-ctx = "0.5"
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "query"] }


tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
rand = { version = "0.9", default-features = false, features = ["thread_rng"] }
# native-tls uses the OS TLS stack (SecureTransport / SChannel / OpenSSL) and
# avoids pulling in rustls-platform-verifier → jni, which would otherwise bring
# in duplicate old versions of thiserror, windows-sys, jni-sys, and getrandom.
reqwest = { version = "0.13", default-features = false, features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "macros", "migrate", "time", "sqlite"] }
time = "0.3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "signal"] }
tower-http = { version = "0.6", default-features = false, features = ["cors", "trace", "compression-gzip", "set-header", "fs"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
url = "2"

[dev-dependencies]
figment = { version = "0.10", features = ["test"] }

mime = "0.3"
tower = { version = "0.5", default-features = false }

[build-dependencies]
time = "0.3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# `axum_ctx::*` is a purpose-built re-export crate; glob import is intentional.
wildcard_imports = "allow"

# SQLite returns i64; visit counts and durations realistically fit in f64/u64.
# Each cast site is individually reviewed and annotated with #[allow(...)].
cast_precision_loss    = "allow"
cast_sign_loss         = "allow"
cast_possible_truncation = "allow"

# RespErr from axum_ctx is large by design (carries HTTP status + message).
result_large_err = "allow"
multiple_crate_versions = "allow"

[profile.dev]
strip = "debuginfo"

[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

[profile.dev.package.sqlx-macros]
opt-level = 3

[profile.dev.package.askama_derive]
opt-level = 3
